fix spacing in main zone, feature and footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -189,15 +189,16 @@ button.btn,
 }
 
 .main {
-    width: 90%;
-    margin: 0 5%;
+    width: 100%;
+    margin: 0 auto;
     @media only screen and (min-width: 1500px) {
         width: 1100px;
         margin: 0 auto;
         padding: 0;
     }
     @media @tablet {
-        padding: 20px 0 0;
+        width: 90%;
+        margin: 0 5%;
     }
     .widget {
         clear: both;
@@ -243,7 +244,16 @@ button.btn,
 
 .bk-footer {
     background-color: @color-swatch2;
-    padding: 20px 0 20px 300px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 0;
+    padding-left: 25%;
+    @media only screen and (min-width: 1290px) {
+        padding-left: 300px;
+    }
+    @media @tablet {
+        padding-left:0;
+    }
     color: @color-swatch6;
     text-align: left;
 }
@@ -464,7 +474,7 @@ button.btn,
    =============================== */
 
 .feature-slideshow {
-  margin: 50px 0;
+  margin: 0 0 50px;
   .widget.responsiveslideshow .slideshow-image-list.crop span.inner.square, .widget.responsiveslideshow .slideshow-image-list.crop span.inner.portrait, .widget.responsiveslideshow .slideshow-image-list.crop span.inner.landscape {
     background-image: none !important;
   }
@@ -509,7 +519,7 @@ button.btn,
     padding: 30px 30px 30px 0;
     @media only screen and (max-width : 768px) and (min-width : 480px) {
         top: 56px;
-        width: 50%;
+        width: 58%;
     }
     @media @mobile {
         top: 30px;
